# Rocker-Server

./: Cargo.toml  README.md  db.sqlite3  diesel.toml
migrations/2024-12-19-180227_create_users/: up.sql
migrations/2024-12-19-180308_create_posts/: up.sql
migrations/2024-12-19-180344_create_comments/: up.sql
src/: main.rs  schema.rs
static/: index.html  style.css
