[package]
name = "rust_01"  # This should match your project name
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4"] }
bcrypt = "0.10"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
